--- a/module3/index.html
+++ b/module3/index.html
@@ -1,1 +1,8 @@
-<h1>YOU!!!</h1>
+<!DOCTYPE html>
+<html lang = "en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>10 Things You May Not Know About Genghis Khan</title>
+    </head>
+</html>
