--- a/module3/index.html
+++ b/module3/index.html
@@ -3,3 +3,14 @@
         <title>10 Things You May Not Know About Genghis Khan</title>
     </head>
 </html>
+<body>
+    <header>
+        <h1>10 Things You May Not Know About Genghis Khan</h1>
+    </header>
+    <main>
+        <section>
+            <h2>“Genghis” Wasn't His Real Name</h2>
+            <p>The man who would become the “Great Khan” of the Mongols was born along the banks of the Onon River sometime around 1162 and originally named <strong>Temujin</strong>, which means “of iron” or “blacksmith.”</p>
+        </section>
+    </main>
+</body>
