--- a/module3/index.html
+++ b/module3/index.html
@@ -11,6 +11,7 @@
         <section>
             <h2>“Genghis” Wasn't His Real Name</h2>
             <p>The man who would become the “Great Khan” of the Mongols was born along the banks of the Onon River sometime around 1162 and originally named <strong>Temujin</strong>, which means “of iron” or “blacksmith.”</p>
+            <img src="Image 2-14-25 at 9.34 PM.jpg" alt="A historical depiction of Genghis Khan"> 
         </section>
     </main>
 </body>
