--- a/module3/index.html
+++ b/module3/index.html
@@ -11,7 +11,7 @@
         <section>
             <h2>“Genghis” Wasn't His Real Name</h2>
             <p>The man who would become the “Great Khan” of the Mongols was born along the banks of the Onon River sometime around 1162 and originally named <strong>Temujin</strong>, which means “of iron” or “blacksmith.”</p>
-            <img src="gh.jpg" alt="A historical depiction of Genghis Khan"> 
+            <img src="gh.jpg" height = "300" alt="A historical depiction of Genghis Khan"> 
         </section>
     </main>
 </body>
