--- a/module3/index.html
+++ b/module3/index.html
@@ -10,8 +10,11 @@
     <main>
         <section>
             <h2>“Genghis” Wasn't His Real Name</h2>
+
             <p>The man who would become the “Great Khan” of the Mongols was born along the banks of the Onon River sometime around 1162 and originally named <strong>Temujin</strong>, which means “of iron” or “blacksmith.”</p>
+            <a href = "https://en.wikipedia.org/wiki/Genghis_Khan">
             <img src="gh.jpg" height = "300" alt="A historical depiction of Genghis Khan"> 
+            </a>
         </section>
     </main>
 </body>
