--- a/module3/index.html
+++ b/module3/index.html
@@ -20,7 +20,7 @@
             <h2>He Had a Rough Childhood</h2>
             <p>Genghis faced numerous hardships, from his father being poisoned when he was nine to being expelled by his tribe. Despite these struggles, he emerged as a powerful leader.</p>
             <a href = "https://www.history.com/topics/asian-history/genghis-khan">
-            <img src="ch.jpg" alt="Illustration of young Temujin on the Mongolian steppe">
+            <img src="ch.jpg" height = "300" alt="Illustration of young Temujin on the Mongolian steppe">
             </a>
         </section>
         
@@ -28,7 +28,7 @@
             <h2>His Burial Site Remains Unknown.</h2>
             <p>The tomb is most likely on or around a Mongolian mountain called Burkhan Khaldun, but to this day its precise location is unknown.</p>
             <a href = "https://www.bbc.com/travel/article/20170717-why-genghis-khans-tomb-cant-be-found">
-            <img src="tomb.jpg" alt="Mongolia is more than seven times the size of Great Britain with only 2% of its roads (Credit: Samuel Bergstrom)">
+            <img src="tomb.jpg" height = "300" alt="Mongolia is more than seven times the size of Great Britain with only 2% of its roads (Credit: Samuel Bergstrom)">
             </a>
         </section>
         
