--- a/module3/index.html
+++ b/module3/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
+<html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>10 Things You May Not Know About Genghis Khan</title>
     </head>
 </html>
@@ -18,7 +21,16 @@
         </section>
         <section>
             <h2>He Had a Rough Childhood</h2>
-            <p>Genghis faced numerous hardships, from his father being poisoned when he was nine to being expelled by his tribe. Despite these struggles, he emerged as a powerful leader.</p>
+            <p>From an early age, Genghis was forced to contend with the brutality of life on the Mongolian
+                Steppe. Rival Tatars poisoned his father when he was only nine, and his own tribe later expelled
+                his family and left his mother to raise her seven children alone. Genghis grew up hunting and
+                foraging to survive, and as an adolescent he may have even murdered his own half-brother in a
+                dispute over food. During his teenage years, rival clans abducted both he and his young wife, and
+                Genghis spent time as a slave before making a daring escape. Despite all these hardships, by his
+                early 20s he had established himself as a formidable warrior and leader. After amassing an army
+                of supporters, he began forging alliances with the heads of important tribes. By 1206, he had
+                successfully consolidated the steppe confederations under his banner and began to turn his
+                attention to outside conquest.</p>
             <a href = "https://www.history.com/topics/asian-history/genghis-khan">
             <img src="ch.jpg" height = "300" alt="Illustration of young Temujin on the Mongolian steppe">
             </a>
